[package]
name = "silentpay"
version = "0.1.0"
edition = "2024"
license = "MIT"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitcoin = { version = "0.32.8", features = ["serde"] }
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"
silentpayments = { git = "https://github.com/cygnet3/spdk", rev = "400abde104f2edd7130f2a7286170cd7fc17d121", default-features = false, features = ["sending", "receiving"] }
wasm-bindgen = "0.2.115"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.82", features = ["Headers", "Request", "RequestInit", "Response", "Window"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.65"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
incremental = false
